Fixes some alignment css issues

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -45,12 +45,22 @@ html, body {
   text-align: center;
 }
 
+.center-block {
+  float: none;
+}
+
 
 /* ===========================
 	#page elements
 ============================ */
+.header-icon {
+  margin-left: 50%;
+  font-size: 12px;
+  color: #F27405;
+}
+
 .headline {
-  margin-top: 20%;
+  margin-top: 15%;
   font-size: 50px;
 }
 
@@ -79,7 +89,7 @@ html, body {
 
 .intro-btn {
   text-align: center;
-  width: 370px;
+  width: 100%;
   margin-bottom: 15px;
   border: 4px solid #85C6A9;
   display: inline-block;
@@ -89,6 +99,11 @@ html, body {
   font-size: 20px;
   border-radius: 9px;
   padding: 5px;
+}
+
+#home-btn {
+  float: none;
+  margin: 0 auto;
 }
 
 .step-box {
